--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link href="/src/style.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
   <body>
-    <p class="read-the-docs">
-      Click on the Vite logo to learn more
+    <p class="blink">
+      Click on the Vite logo to learn more fgh jh jk hjk ghj ghj g hj <span class="trigger" id="trigger">TEST BLINK</span> hdjdfkdf kfg kfdgjkfdgj dkffdjgkfd
     </p>
+    <p class="popper" id="popper">CA MARCHE</p>
   </div>
     <script type="module" src="/src/main.js"></script>
   </body>
