made Blink class with static create method

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <p class="blink">
-      Click on the Vite logo to learn more fgh jh jk hjk ghj ghj g hj <span class="trigger" id="trigger">TEST BLINK</span> hdjdfkdf kfg kfdgjkfdgj dkffdjgkfd
+      Click on the Vite logo to learn g hj <span class="trigger" id="trigger">TEST BLINK</span> hdjdfkdf kfg kfdgjkfdgj dkffdjgkfd
     </p>
     <p class="popper" id="popper">CA MARCHE</p>
   </div>
