Blink class working, placement too

--- a/index.html
+++ b/index.html
@@ -7,11 +7,23 @@
     <title>Vite App</title>
   </head>
   <body>
-    <p class="blink">
-      Click on the Vite logo to learn g hj <span class="trigger" id="trigger">TEST BLINK</span> hdjdfkdf kfg kfdgjkfdgj dkffdjgkfd
+    <p class="blink" >
+      Click on the Vite  <span class="trigger" id="trigger">TEST BLINK</span> 
     </p>
-    <p class="popper" id="popper">CA MARCHE</p>
+    <p class="popper" id="popper" >CA MARCHE</p>
   </div>
     <script type="module" src="/src/main.js"></script>
   </body>
+  <style>
+    body, p {
+      margin: 0
+    }
+
+    .trigger, .popper {
+      padding: 8px 12px
+    }
+    .popper {
+      padding: 12px 14px
+    }
+  </style>
 </html>
