add arrow on top placement

--- a/index.html
+++ b/index.html
@@ -10,15 +10,11 @@
     <p class="blink" >
       Click on the Vite  <span class="trigger" id="trigger">TEST BLINK</span> 
     </p>
-    <p class="popper" id="popper" >CA MARCHE</p>
+    <div class="popper" id="popper" >CA MARCHE</div>
   </div>
     <script type="module" src="/src/main.js"></script>
   </body>
   <style>
-    body, p {
-      margin: 0
-    }
-
     .trigger, .popper {
       padding: 8px 12px
     }
