add transition for appear disappear popper

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <p class="blink" >
-      Click on the Vite  <span class="trigger" id="trigger">TEST BLINK</span> 
+      Click on the Vite  <span class="trigger" id="trigger">TEST BLINK</span> fghkf djsefs djk fhsdjk fsdjkf
     </p>
     <div class="popper" id="popper" >CA MARCHE</div>
   </div>
@@ -17,6 +17,10 @@
   <style>
     .trigger, .popper {
       padding: 8px 12px
+    }
+
+    .popper {
+      transition: display 2s;
     }
   
   </style>
