--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <p style="margin-top: 150px">
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti ad
+      Lorem ipsum, dolor sit amet consectetur ghgh adipisicing elit. Corrupti ad
       accusantium tenetur sed
       <span style="font-weight: bold; color: red" id="trigger">veritatis</span>
       assumenda?
