add top-right and top-left placement

--- a/index.html
+++ b/index.html
@@ -15,6 +15,22 @@
     </p>
 
     <p id="popper">Lorem ipsum dolor sit amet.</p>
+    <!--
+
+  <p>
+  Lorem ipsum, dolor sit amet consectetur ghgh adipisicing elit. Corrupti ad
+  accusantium tenetur sed
+  <span style="font-weight: bold; color: red" id="trigger1">veritatis</span>
+  assumenda?
+</p>
+
+<p id="popper1">Lorem ipsum dolor sit amet.</p>
+-->
     <script src="src/main.js" type="module"></script>
+    <style>
+      #popper {
+        background-color: red;
+      }
+    </style>
   </body>
 </html>
