create css start add animation

--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
       assumenda?
     </p>
 
-    <p id="popper">Lorem ipsum dolor sit amet.</p>
+    <div id="popper">
+      <p>Lorem ipsum dolor sit amet.</p>
+      <p>Lorem ipsum dolor sit amet.</p>
+      <p>Lorem ipsum dolor sit amet.</p>
+      <p>Lorem ipsum dolor sit amet.</p>
+    </div>
     <!--
 
   <p>
