--- a/index.html
+++ b/index.html
@@ -20,6 +20,19 @@
       <p>Lorem ipsum dolor sit amet.</p>
       <p>Lorem ipsum dolor sit amet.</p>
     </div>
+
+    <p>
+      Lorem ipsum, dolor sit amet consectetur ghgh adipisicing elit. Corrupti ad
+      accusantium tenetur sed
+      <span style="font-weight: bold; color: red" id="trigger1">veritatis</span>
+      assumenda?
+    </p>
+
+    <div id="popper1">
+      <p>Lorem ipsum dolor sit amet.</p>
+      <p>Lorem ipsum dolor sit amet.</p>
+      <p>Lorem ipsum dolor sit amet.</p>
+    </div>
     <!--
 
   <p>
@@ -33,7 +46,8 @@
 -->
     <script src="src/main.js" type="module"></script>
     <style>
-      #popper {
+      #popper,
+      #popper1 {
         background-color: red;
       }
     </style>
